test swiper flicker fix

--- a/styles/swiper.css
+++ b/styles/swiper.css
@@ -1,7 +1,13 @@
 .swiper {
   width: 100%;
   height: 100%;
-} 
+}
+
+/* Testing swiper flickr fix */
+.swiper-slide {
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+}
 
 .swiper-slide {
   width: auto;
